--- a/app/components/ContactUs/style.scss
+++ b/app/components/ContactUs/style.scss
@@ -11,8 +11,8 @@
   .modal{
     min-width: 300px;
     min-height: 200px;
-    max-height: 80vh;
-    overflow-y: auto;
+    // max-height: 80vh;
+    // overflow-y: auto;
     &::-webkit-scrollbar{
       width: 5px;
     }
@@ -31,28 +31,30 @@
     .title{
       text-align: center;
       font-size: 36px;
-      font-weight: 800;
-      color: $darkGrey;
+      font-weight: $wt-extraBold;
+      color: $prim-highlight;
     }
     .field{
       display: flex;
       flex-direction: column;
-      margin: 1rem 0;
+      margin:  0;
       width: 100%;
       label{
-        font-size: 18px;
-        font-weight: 800;
-        color: $darkGrey;
+        font-size: 22px;
+        font-weight: $wt-bold;
+        color: $prim-highlight;
         margin-bottom: 0.5rem;
       }
       input,textarea{
         height: 36px;
+        margin-bottom: 0.5rem;
         border-radius: 4px;
         border: 1px solid $darkGrey;
         min-width: 400px;
         padding-left: 1rem;
         color: $darkGrey;
         font-size: 16px;
+        font-weight: $wt-bold;
         &:focus,&:active,&:hover{
           border: 1px solid $darkGrey;
           outline: none;
@@ -73,6 +75,21 @@
         margin-left: auto;
         height: 40px;
         font-size: 22px;
+      }
+    }
+    .formGroup{
+      @include spaceBetween;
+      width: 100%;
+      gap: 2rem;
+      .field{
+        width: 45%;
+      }
+      @media (max-width : 530px) {
+        flex-direction: column;
+        gap: 0;
+        .field{
+          width: 100%;
+        }
       }
     }
     img{
