--- a/app/components/Footer/style.scss
+++ b/app/components/Footer/style.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   padding: 1rem 3rem ;
   background-color: $primary-green;
+  background-image: linear-gradient(to bottom right, rgba(0, 160, 161, 0.8), rgba(0, 160, 161, 1));
   flex-wrap: wrap;
   gap: 2rem;
   margin-top: auto;
@@ -17,12 +18,12 @@
     margin-bottom: auto;
     h3{
       font-size: 36px;
-      font-weight: 600;
+      font-weight: $wt-reg;
       color: $white;
     }
     h4{
       font-size: 16px;
-      font-weight: 500;
+      font-weight: $wt-bold;
       color: $white;
       margin: 0 0 6px 0;
       display: flex;
@@ -37,9 +38,20 @@
   }
   .info{
     min-width: 250px;
+    .logo{
+      width: 150px;
+      height: 80px;
+      object-fit: contain;
+    }
     img{
       margin-bottom: 1rem;
     }
+    
+  .icon{
+    img{
+      margin-bottom: 0;
+    }
+  }
   }
   .location{
     margin-right: 4rem;
