--- a/app/containers/AboutUs/style.scss
+++ b/app/containers/AboutUs/style.scss
@@ -1,7 +1,20 @@
 @import '../../styles/base/main.scss';
 .AboutUS{
   // margin-top: 114px;
-  transition: all 1s linear;
+  // transition: all 1s linear;
+  .logo{
+    img{
+      width: 200px;
+      height: 140px;
+      object-fit: cover;
+      margin: 0 auto 0 0;
+      line-height: 45px;
+      // @media (min-width : 1400px){
+      //   margin-right: 41%;
+
+      // }
+    }
+  }
   .header{
     width: 100%;
     height: 100px;
@@ -9,7 +22,7 @@
     padding-top: 1.8rem;
     padding-left: 20%;
     font-size: 48px;
-    font-weight: 800;
+    font-weight: $wt-extraBold;
     color: $white;
     margin: 0;
     position: relative;
@@ -44,16 +57,20 @@
     .logo{
       display: flex;
       align-items: center;
-      margin: 4rem 4rem 2rem 0;
+      margin: 4rem 4rem 4rem 0;
     }
     .tagline{
       margin: 2rem 0;
       font-size: 48px;
-      font-weight: 800;
+      font-weight: $wt-bold;
       color: $prim-highlight;
       @media  (max-width: 450px) {
         font-size: 40px;
       }
+    }
+    .content{
+      min-height: 300px;
+      padding: 2rem;
     }
     min-height: 200px;
     width: 100%;
@@ -62,7 +79,7 @@
     padding: 2rem 20%;
     font-size: 24px;
     line-height: 35px;
-    font-weight: 500;
+    font-weight: $wt-reg;
     color: $darkGrey;
   }
 }
