--- a/app/containers/Home/style.scss
+++ b/app/containers/Home/style.scss
@@ -17,7 +17,7 @@
     padding: 5rem 1.5rem 2rem 1.5rem;
     .title{
       font-size: 64px;
-      font-weight: 800;
+      font-weight: $wt-extraBold;
       color: $primary-green;
       width: 100%;
       text-align: center;
@@ -55,7 +55,7 @@
         .label{
           color: $primary-green;
           font-size: 24px;
-          font-weight: 600;
+          font-weight: $wt-reg;
           margin-bottom: 4rem;
           width: 100%;
           opacity: 80%;
@@ -65,11 +65,12 @@
     }
   }
   .marqeeProducts{
-    background-color: $prim-highlight;
+    // background-color: $prim-highlight;
+    background-image: linear-gradient(to bottom right, rgba(21,31,109,0.9), $prim-highlight);
     padding: 5rem 1.5rem;
     .title{
       font-size: 64px;
-      font-weight: 800;
+      font-weight: $wt-extraBold;
       color: $white;
       text-align: center;
       margin-bottom: 3rem;
@@ -84,7 +85,7 @@
     }
     .description{
       font-size: 24px;
-      font-weight: 600;
+      font-weight: $wt-reg;
       width: 100%;
       color: $white;
       text-align: center;
@@ -118,7 +119,7 @@
           max-width: 100%;
           height: 50px;
           font-size: 18px;
-          font-weight: 600;
+          font-weight: $wt-reg;
           margin: 0;
           background-color: $primary-green;
           @include centreAlign;
@@ -165,7 +166,7 @@
     }
     .title{
       font-size: 64px;
-      font-weight: 800;
+      font-weight: $wt-extraBold;
       color: $prim-highlight;
       text-align: center;
       margin-bottom: 3rem;
